fixed dependencies, changed getEdges() implementation, fixed it for undirected graphs